[package]
name = "smiles-parser"
version = "0.3.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"
description = "SMILES (chemical formula) parser based on the OpenSMILES spec"
keywords = ["chemistry", "SMILES", "parser", "OpenSMILES", "formula"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hobofan/smiles-parser"

[dependencies]
nom = "5.0.1"
ptable = {package = "periodic-table-on-an-enum", version = "0.3"}

petgraph = { version = "0.5.0", optional = true }
itertools = { version = "0.9.0", optional = true }
derive_more = { version = "0.99.0", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[features]
graph = ["petgraph", "itertools", "derive_more"]

